# vibecode-webgui

./: .datadog-ci.json  .dockerignore  .env.example  .eslintcache  .eslintrc.production.js  .gitignore  .gitmodules  .npmrc  .pre-commit-config.yaml  AI_CLI_TOOLS_IMPLEMENTATION_PLAN.md  AI_CLI_TOOLS_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_SUMMARY.md  AUTHENTICATION_TESTING_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_VALIDATION.md  CONSOLIDATED_DOCUMENTATION.md  CONTAINER_MANIFEST.md  CONTRIBUTING.md  DATABASE_MONITORING_SETUP.md  DATADOG_MONITORING_CONFIGURATION.md  DEVELOPMENT_CREDENTIALS.md  DOCKER_MODEL_RUNNER_SETUP.md  DOCS_CONSOLIDATION_PLAN.md  DOCS_DEPLOYMENT_VALIDATION.md  Dockerfile  Dockerfile.dev  Dockerfile.lightningcss-only  Dockerfile.multiarch  Dockerfile.prod  Dockerfile.production  Dockerfile.simple  Dockerfile.tailwind-test  E2E_TEST_INFRASTRUCTURE_SUMMARY.md  ENV_VARIABLES.md  FINAL_E2E_TEST_RESULTS.md  GENAI_ENHANCEMENT_SUMMARY.md  HELM_SCALING_ANALYSIS.md  (+77 more)
.github/: dependabot.yml
.husky/: pre-commit
.pre-commit-cache/: .eslintcache.timestamp  .github_workflows_ci.yml.timestamp  .github_workflows_deploy-docs.yml.timestamp  .github_workflows_k8s-deploy.yml.timestamp  .github_workflows_synthetic-test.yml.timestamp  .husky_pre-commit.timestamp  .pre-commit-cache_.github_workflows_ci.yml.timestamp.timestamp  .pre-commit-cache_Dockerfile.timestamp.timestamp  .pre-commit-cache_TEMPORAL_INTEGRATION_SUMMARY.md.timestamp.timestamp  .pre-commit-cache_scripts_pre-commit-tests-optimized.sh.timestamp.timestamp  .pre-commit-cache_security-scan.exitcode.timestamp  CODE_OF_CONDUCT.md.timestamp  COMPREHENSIVE_TEST_VALIDATION.md.timestamp  Dockerfile.multiarch.timestamp  Dockerfile.timestamp  GENAI_ENHANCEMENT_SUMMARY.md.timestamp  GENAI_INTEGRATION_ARCHITECTURE.md.timestamp  IMPLEMENTATION_COMPLETE.md.timestamp  KUBERNETES_SECRETS_AUTOMATION.md.timestamp  LICENSE_SWEEP_GENAI_LIBRARIES.md.timestamp  MASTRA_INTEGRATION_GUIDE.md.timestamp  PRECOMMIT_OPTIMIZATION_SUMMARY.md.timestamp  README.md.timestamp  TEMPORAL_GENAI_INTEGRATION.md.timestamp  TEMPORAL_INTEGRATION_SUMMARY.md.timestamp  TODO.md.timestamp  VSCODE_EXTENSION_CONFIGURATION.md.timestamp  code-server.timestamp  code_server_diy_diagram.png.timestamp  docker-compose.multiarch.yml.timestamp  docker_code-server_Dockerfile.timestamp  docker_code-server_README.md.timestamp  docker_code-server_keybindings.json.timestamp  docker_mcp-servers_Dockerfile.timestamp  docs_.astro_data-store.json.timestamp  docs_.astro_settings.json.timestamp  (+25 more)
templates/rust-burn/basic-neural-network/: Cargo.toml
templates/rust-burn/basic-neural-network/src/: data.rs  lib.rs  model.rs  training.rs
templates/rust-burn/phi-local-llm/: Cargo.toml
templates/rust-burn/phi-local-llm/src/: lib.rs  phi_models.rs
(+876 files in other folders)
